// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Package Json Utils add scripts, dependencies and test config for existing project 1`] = `
Object {
  "author": "",
  "dependencies": Object {
    "@nestjs/common": "^6.0.0",
    "@nestjs/core": "^6.0.0",
    "@nestjs/platform-express": "^6.0.0",
    "@sap/cloud-sdk-core": "^undefined",
    "reflect-metadata": "^0.1.12",
    "rimraf": "^2.6.2",
    "rxjs": "^6.3.3",
  },
  "description": "",
  "devDependencies": Object {
    "@nestjs/testing": "6.1.1",
    "@sap-cloud-sdk/cli": "^undefined",
    "@sap/cloud-sdk-test-util": "^undefined",
    "@types/express": "4.16.1",
    "@types/jest": "24.0.11",
    "@types/node": "11.13.4",
    "@types/supertest": "2.0.7",
    "jest": "24.7.1",
    "prettier": "1.17.0",
    "supertest": "4.0.2",
    "ts-jest": "24.0.2",
    "ts-node": "8.1.0",
    "tsc-watch": "2.2.1",
    "tsconfig-paths": "3.8.0",
    "tslint": "5.16.0",
    "typescript": "3.4.3",
  },
  "jest": Object {
    "coverageDirectory": "../coverage",
    "moduleFileExtensions": Array [
      "js",
      "json",
      "ts",
    ],
    "rootDir": "src",
    "testEnvironment": "node",
    "testRegex": ".spec.ts$",
    "transform": Object {
      "^.+\\\\.(t|j)s$": "ts-jest",
    },
  },
  "license": "MIT",
  "name": "nest",
  "scripts": Object {
    "build": "rimraf dist && tsc -p tsconfig.build.json",
    "ci-backend-unit-test": "echo \\"Test your application and write results in a JUnit format to \`s4hana_pipeline/reports/backend-unit/\` and coverage in a cobertura format to \`s4hana_pipeline/reports/coverage/backend-unit/\`\\"",
    "ci-build": "echo \\"Use this to compile or minify your application\\"",
    "ci-integration-test": "echo \\"Test your application and write results in a JUnit format to \`s4hana_pipeline/reports/backend-integration/\` and coverage in a cobertura format to \`s4hana_pipeline/reports/coverage/backend-integration/\`\\"",
    "ci-package": "sap-cloud-sdk package --include=\\"package.json,package-lock.json,index.js,dist/**/*\\"",
    "format": "prettier --write \\"src/**/*.ts\\"",
    "lint": "tslint -p tsconfig.json -c tslint.json",
    "start": "ts-node -r tsconfig-paths/register src/main.ts",
    "start:debug": "tsc-watch -p tsconfig.build.json --onSuccess \\"node --inspect-brk dist/main.js\\"",
    "start:dev": "tsc-watch -p tsconfig.build.json --onSuccess \\"node dist/main.js\\"",
    "start:prod": "node dist/main.js",
    "test": "jest",
    "test:cov": "jest --coverage",
    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
    "test:e2e": "jest --config ./test/jest-e2e.json",
    "test:watch": "jest --watch",
  },
  "version": "0.0.1",
}
`;

exports[`Package Json Utils add scripts, dependencies and test config for scaffolded project 1`] = `
Object {
  "author": "",
  "dependencies": Object {
    "@nestjs/common": "^6.0.0",
    "@nestjs/core": "^6.0.0",
    "@nestjs/platform-express": "^6.0.0",
    "@sap/cloud-sdk-core": "^undefined",
    "reflect-metadata": "^0.1.12",
    "rimraf": "^2.6.2",
    "rxjs": "^6.3.3",
  },
  "description": "",
  "devDependencies": Object {
    "@nestjs/testing": "6.1.1",
    "@sap-cloud-sdk/cli": "^undefined",
    "@sap/cloud-sdk-test-util": "^undefined",
    "@types/express": "4.16.1",
    "@types/jest": "24.0.11",
    "@types/node": "11.13.4",
    "@types/supertest": "2.0.7",
    "jest": "24.7.1",
    "jest-junit": "^undefined",
    "prettier": "1.17.0",
    "supertest": "4.0.2",
    "ts-jest": "24.0.2",
    "ts-node": "8.1.0",
    "tsc-watch": "2.2.1",
    "tsconfig-paths": "3.8.0",
    "tslint": "5.16.0",
    "typescript": "3.4.3",
  },
  "jest": Object {
    "collectCoverage": true,
    "coverageDirectory": "../s4hana_pipeline/reports/coverage-reports/backend-unit",
    "coverageReporters": Array [
      "text",
      "cobertura",
    ],
    "moduleFileExtensions": Array [
      "js",
      "json",
      "ts",
    ],
    "reporters": Array [
      "default",
      Array [
        "jest-junit",
        Object {
          "outputDirectory": "./s4hana_pipeline/reports/backend-unit",
          "suiteName": "backend unit tests",
        },
      ],
    ],
    "rootDir": "src",
    "testEnvironment": "node",
    "testRegex": ".spec.ts$",
    "transform": Object {
      "^.+\\\\.(t|j)s$": "ts-jest",
    },
  },
  "license": "MIT",
  "name": "nest",
  "scripts": Object {
    "build": "rimraf dist && tsc -p tsconfig.build.json",
    "ci-backend-unit-test": "jest --ci",
    "ci-build": "npm run build",
    "ci-e2e": "echo \\"Test your application and write results in a JUnit format to \`s4hana_pipeline/reports/e2e/\`\\"",
    "ci-frontend-unit-test": "echo \\"Test your application and write results in a JUnit format to \`s4hana_pipeline/reports/frontend-unit/\` and coverage in a cobertura format to \`s4hana_pipeline/reports/coverage/frontend-unit/\`\\"",
    "ci-integration-test": "jest --ci --config ./test/jest-e2e.json",
    "ci-package": "sap-cloud-sdk package",
    "deploy": "npm run ci-build && npm run ci-package && cf push",
    "format": "prettier --write \\"src/**/*.ts\\"",
    "lint": "tslint -p tsconfig.json -c tslint.json",
    "start": "ts-node -r tsconfig-paths/register src/main.ts",
    "start:debug": "tsc-watch -p tsconfig.build.json --onSuccess \\"node --inspect-brk dist/main.js\\"",
    "start:dev": "tsc-watch -p tsconfig.build.json --onSuccess \\"node dist/main.js\\"",
    "start:prod": "node dist/main.js",
    "test": "jest",
    "test:cov": "jest --coverage",
    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
    "test:e2e": "jest --config ./test/jest-e2e.json",
    "test:watch": "jest --watch",
  },
  "version": "0.0.1",
}
`;

exports[`Package Json Utils should parse the package.json 1`] = `
Array [
  "name",
  "version",
  "description",
  "author",
  "license",
  "scripts",
  "dependencies",
  "devDependencies",
  "jest",
]
`;
